# grid_trading

./: .gitignore  AGENTS.md  README.md  TRADE_COMPETITION_GUIDE.md  alembic.ini  pyproject.toml
alembic/: env.py
config/: console_registry.json  runner_user_presets.json
docs/: ADAPTIVE_STEP_SCALE_RUNBOOK.md  ARX_O_RECOVERY_CONTROL_FLOW.md  ENDED_FUTURES_COMPETITION_SUMMARY.md  INCIDENT_20260330_ECS114_KAT_BARD.md  INCIDENT_20260507_RUNNING_STATUS_114_TIMEOUT.md  INCIDENT_20260722_ECS150_SSH_ACCESS.md  KAT_GUARD_AUTOMATION.md  PHAROS_FROZEN_INVENTORY_EXPERIMENT.md  PHAROS_HEDGE_BQ_STRATEGY_RUNBOOK.md  PRODUCTION_STRATEGY_PLATFORM_REDESIGN.md  RUNNER_START_SAFETY_POLICY.md  SPOT_APP_LOSS_GUARD_RUNBOOK.md  SPOT_COMPETITION_PLAYBOOK.md  STRATEGY_EXECUTION_GUIDE.md  STRATEGY_OPTIMIZATION_LOG.md  STRATEGY_PLATFORM_IA_DATA_MODEL.md  STRATEGY_RISK_GUARD_POLICY.md  TRADE_DATABASE_114_RUNBOOK.md
output/: soonusdt_loop_runner_control.json  symbol_lists.json
scripts/: bard_111_loss_guard.py  bard_profit_protect_replay.py  based_adaptive_replay.py  competition_autotune_111.py  extract_competition_meta.sh  kat_guard_report.py  short_volume_candidates.py  spot_trade_summary.py
tests/: test_adaptive_regime_router.py  test_ai_scheduler.py  test_alpha_airdrop_monitor.py  test_audit.py  test_backtest.py  test_bard_profit_protect_replay.py  test_basis_monitor.py  test_best_quote_maker_volume.py  test_bq_budget_controller.py  test_bq_liveness_terminal_guard.py  test_bq_volume_recovery_guard.py  test_central_strategy_workbench.py  test_competition.py  test_competition_board.py  test_competition_elastic_volume.py  test_competition_ops_stack.py  test_competition_target_gate.py  test_competition_target_gate_window.py  test_competition_volume_monitor.py  test_configure_arx_single_leg_freeze.py  test_configure_ousdt_short_freeze_reward.py  test_console.py  test_data.py  test_data_fetch.py  test_data_market_stream.py  test_data_signed_cache.py  test_deploy_scripts.py  test_dry_run.py  test_execution_events.py  test_execution_regime.py  test_frozen_inventory_order_authorization.py  test_frozen_pair_submission_manifest.py  test_funding_margin.py  test_futures_inventory_boundary.py  test_futures_recovery_coordinator.py  test_futures_recovery_runtime_adapter.py  test_futures_recovery_shadow.py  test_futures_recovery_store.py  test_futures_run_lifecycle.py  test_futures_target_pace_window.py  (+63 more)
(+217 files in other folders)
