[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-optimizer"
version = "0.1.0"
description = "Arithmetic long-grid optimizer for BTC/ETH perpetual strategies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
grid-opt = "grid_optimizer.cli:main"
grid-web = "grid_optimizer.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
